<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.montilivi.esdeveniments.ui.events.home.HomeFragment"
        android:label="@string/title_home">
        <action
            android:id="@+id/action_home_to_eventDetail"
            app:destination="@id/eventDetailFragment" />
        <action
            android:id="@+id/action_home_to_createEvent"
            app:destination="@id/createEventFragment" />
    </fragment>

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.montilivi.esdeveniments.ui.auth.LoginFragment"
        android:label="@string/title_login">
        <action
            android:id="@+id/action_login_to_register"
            app:destination="@id/registerFragment" />

        <action
            android:id="@+id/action_login_to_home"
            app:destination="@id/homeFragment" />
        <action
            android:id="@+id/action_login_to_preferences"
            app:destination="@id/preferencesFragment" />
    </fragment>

    <fragment
        android:id="@+id/registerFragment"
        android:name="com.montilivi.esdeveniments.ui.auth.RegisterFragment"
        android:label="@string/title_register">

        <action
            android:id="@+id/action_register_to_preferences"
            app:destination="@id/preferencesFragment" />
        <action
            android:id="@+id/action_register_to_login"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/registerFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/preferencesFragment"
        android:name="com.montilivi.esdeveniments.ui.preferences.PreferencesFragment"
        android:label="@string/title_preferences">
        <argument
            android:name="authProvider"
            app:argType="string" />
        <action
            android:id="@+id/action_preferences_to_home"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/preferencesFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/eventDetailFragment"
        android:name="com.montilivi.esdeveniments.ui.events.detail.EventDetailFragment"
        android:label="@string/title_event_detail">
        <action
            android:id="@+id/action_eventDetailFragment_to_createEventFragment"
            app:destination="@id/createEventFragment" />
        <action
            android:id="@+id/action_eventDetailFragment_to_chatFragment"
            app:destination="@id/chatFragment" />
        <argument
            android:name="eventId"
            android:defaultValue=""
            app:argType="string" />
        <argument
            android:name="fromPastEvents"
            android:defaultValue="false"
            app:argType="boolean" />
        <argument
            android:name="eventTitle"
            app:argType="string"
            android:defaultValue="" />
    </fragment>
    <fragment
        android:id="@+id/createEventFragment"
        android:name="com.montilivi.esdeveniments.ui.events.create.CreateEventFragment"
        android:label="@string/title_create_event">
        <action
            android:id="@+id/action_createEvent_to_selectLocation"
            app:destination="@id/selectLocationFragment" />
        <action
            android:id="@+id/action_createEvent_to_eventDetail"
            app:destination="@id/eventDetailFragment" />
        <argument
            android:name="eventId"
            android:defaultValue=""
            app:argType="string"
            app:nullable="true" />
    </fragment>
    <fragment
        android:id="@+id/selectLocationFragment"
        android:name="com.montilivi.esdeveniments.ui.location.SelectLocationFragment"
        android:label="@string/title_select_location"/>
    <fragment
        android:id="@+id/subscribedEventsFragment"
        android:name="com.montilivi.esdeveniments.ui.events.subscribed.SubscribedEventsFragment"
        android:label="@string/title_subscribed_events">

        <action
            android:id="@+id/action_subscribedEvents_to_eventDetail"
            app:destination="@id/eventDetailFragment">

            <argument
                android:name="eventId"
                app:argType="string" />

            <argument
                android:name="fromPastEvents"
                android:defaultValue="false"
                app:argType="boolean" />
        </action>
    </fragment>
    <fragment
        android:id="@+id/pastEventsFragment"
        android:name="com.montilivi.esdeveniments.ui.events.past.PastEventsFragment"
        android:label="@string/title_past_events">
        <action
            android:id="@+id/action_pastEvents_to_eventDetail"
            app:destination="@id/eventDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/chatFragment"
        android:name="com.montilivi.esdeveniments.ui.events.chat.ChatFragment"
        android:label="@string/title_chat">
        <argument
            android:name="eventId"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/suggestCategoryFragment"
        android:name="com.montilivi.esdeveniments.ui.categories.SuggestCategoryFragment"
        android:label="@string/title_suggest_category"
        tools:layout="@layout/fragment_suggest_category" />

</navigation>